fix misaligned head logo

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -27,11 +27,13 @@
         transition-duration: .1s;
       }
       &.brand {
-        margin-top: 4px;
-        margin-left: 20px;
         background: url(../../../img/logo.svg) no-repeat;
-        background-size: contain;
+        background-size: auto 40px;
+        background-position: left 40%;
         width: 150px;
+        height: 50px;
+        margin: 0;
+        padding: 0;
       }
     }
     i {
